Issue 301 - Increase contrast between P1 and P2 labels (#315)
* Issue 301 - Increase contrast between P1 and P2 labels

* Update colors for P1, P2, P3

--- a/src/content/components/PriorityGuide/PriorityGuide.module.scss
+++ b/src/content/components/PriorityGuide/PriorityGuide.module.scss
@@ -37,17 +37,17 @@
 }
 
 .p1 {
-  background: #45a1ff;
+  background: #0083ff;
   border-color: transparent;
   color: white;
 }
 .p2 {
-  background: #9fc6ee;
+  background: #ac6bc3;
   border-color: transparent;
   color: white;
 }
 .p3 {
-  color: #45a1ff;
+  color: #bf6fd4;
   background: transparent;
 }
 .p4, .p5 {
